unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/OrderApi__Subscription_Plan__c.object-meta.xml
<CustomObject>
    <description>Subscription Plans control the subscription dates with &quot;Termed&quot;, &quot;Evergreen&quot;, and &quot;Calendar&quot; options.</description>
    <label>Subscription Plan</label>
    <nameField>
        <label>Subscription Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>