unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/Billing_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Billing_Quarter__c</fullName>
    <label>Billing Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Quarter</valueSetName>
    </valueSet>
</CustomField>