unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/Invoice_Timing__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Timing__c</fullName>
    <label>Invoice Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoice_Timing</valueSetName>
    </valueSet>
</CustomField>