unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Advanced_Calendar_Days__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Advanced_Calendar_Days__c</fullName>
    <description>Number of days before the start of the next calendar term, during which new subscriptions are automatically extended to include the next term.</description>
    <inlineHelpText>Number of days before the start of the next calendar term, during which new subscriptions are automatically extended to include the next term.</inlineHelpText>
    <label>Advanced Calendar Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>