unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Advanced_Calendar_Free_Paid__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Advanced_Calendar_Free_Paid__c</fullName>
    <description>Determines whether Advanced Calendar Days are free or paid. Paid days are automatically prorated based on the subscription price.</description>
    <inlineHelpText>Determines whether Advanced Calendar Days are free or paid. Paid days are automatically prorated based on the subscription price.</inlineHelpText>
    <label>Advanced Calendar Free/Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>