unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Auto_Renew_Option__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Renew_Option__c</fullName>
    <description>** Required ** Select &quot;Disabled&quot; to turn off auto-renew for all related Subscriptions, select &quot;Enabled&quot; to allow related Subscriptions to optionally enable auto-renew, select &quot;Required&quot; to enable auto-renew without option.</description>
    <inlineHelpText>** Required ** Select &quot;Disabled&quot; to turn off auto-renew for all related Subscriptions, select &quot;Enabled&quot; to allow related Subscriptions to optionally enable auto-renew, select &quot;Required&quot; to enable auto-renew without option.</inlineHelpText>
    <label>Auto Renew Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>