unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Auto_Send_Proforma_Invoice_Emails__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Send_Proforma_Invoice_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked an email will be sent using the configurations defined on the Subscription Plan record related to Proforma Invoice Emails</description>
    <inlineHelpText>When checked an email will be sent using the configurations defined on the Subscription Plan record related to Proforma Invoice Emails</inlineHelpText>
    <label>Auto Send Proforma Invoice Emails</label>
    <type>Checkbox</type>
</CustomField>