unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Bill_Cycle__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Bill_Cycle__c</fullName>
    <description>** Required ** Bill Cycles drive the day of month a subscriber is invoiced/auto-charged for a subscription. Select &quot;AUTO&quot; to derive the day of month based upon the Activation/Last Renewal Date. Select &quot;CUSTOM&quot; to specify a specific &quot;Bill Cycle Day&quot;.</description>
    <inlineHelpText>** Required ** Bill Cycles drive the day of month a subscriber is invoiced/auto-charged for a subscription. Select &quot;AUTO&quot; to derive the day of month based upon the Activation/Last Renewal Date. Select &quot;CUSTOM&quot; to specify a specific &quot;Bill Cycle Day&quot;.</inlineHelpText>
    <label>Bill Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTO</fullName>
                <default>true</default>
                <label>AUTO</label>
            </value>
            <value>
                <fullName>FIRST</fullName>
            </value>
            <value>
                <fullName>LAST</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>