unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Bill_Cycle_Day__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Bill_Cycle_Day__c</fullName>
    <description>** Conditionally Required ** If &quot;Bill Cycle&quot; selected as &quot;CUSTOM&quot; need to define specific day for Bill Cycle.</description>
    <inlineHelpText>** Conditionally Required ** If &quot;Bill Cycle&quot; selected as &quot;CUSTOM&quot; need to define specific day for Bill Cycle.</inlineHelpText>
    <label>Bill Cycle Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>