unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to related Business Group. Derived from the user&#39;s &quot;Business Group&quot; (App Config) custom setting if not defined on record creation.</description>
    <inlineHelpText>** System Calculated Override ** Link to related Business Group. Derived from the user&#39;s &quot;Business Group&quot; (App Config) custom setting if not defined on record creation.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Subscription Plans</relationshipLabel>
    <relationshipName>Subscription_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>