unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Calendar_End_Month__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Calendar_End_Month__c</fullName>
    <description>** Conditionally Required ** Select the end month for the calendar term. Required for all &quot;Calendar&quot; Subscription Plans.</description>
    <inlineHelpText>** Conditionally Required ** Select the end month for the calendar term. Required for all &quot;Calendar&quot; Subscription Plans.</inlineHelpText>
    <label>Calendar End Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - January</fullName>
            </value>
            <value>
                <fullName>02 - February</fullName>
            </value>
            <value>
                <fullName>03 - March</fullName>
            </value>
            <value>
                <fullName>04 - April</fullName>
            </value>
            <value>
                <fullName>05 - May</fullName>
            </value>
            <value>
                <fullName>06 - June</fullName>
            </value>
            <value>
                <fullName>07 - July</fullName>
            </value>
            <value>
                <fullName>08 - August</fullName>
            </value>
            <value>
                <fullName>09 - September</fullName>
            </value>
            <value>
                <fullName>10 - October</fullName>
            </value>
            <value>
                <fullName>11 - November</fullName>
            </value>
            <value>
                <fullName>12 - December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>