unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>Optional description for the Subscription Plan.</description>
    <inlineHelpText>Optional description for the Subscription Plan.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>