unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Disable_Renew__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Disable_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, cannot renew subscription due to custom business process. Defaults unchecked.</description>
    <inlineHelpText>When checked, cannot renew subscription due to custom business process. Defaults unchecked.</inlineHelpText>
    <label>Disable Renew</label>
    <type>Checkbox</type>
</CustomField>