unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Enable_Automatic_Invoice_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Automatic_Invoice_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, system will create scheduled payments against invoices. &quot;Require Payment Method&quot; field will automatically be checked.</description>
    <inlineHelpText>When checked, system will create scheduled payments against invoices. &quot;Require Payment Method&quot; field will automatically be checked.</inlineHelpText>
    <label>Enable Automatic Invoice Payment</label>
    <type>Checkbox</type>
</CustomField>