unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Enable_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Payment_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, subscribers will pay for subscriptions in installments - the frequency/amount is driven by the schedule options configuration fields. Defaults unchecked.</description>
    <inlineHelpText>When checked, subscribers will pay for subscriptions in installments - the frequency/amount is driven by the schedule options configuration fields. Defaults unchecked.</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>