unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Enable_Proration__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Proration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system will prorate new subscribers depending upon the &quot;Proration Rule&quot;. Defaults unchecked. Valid only for &quot;Calendar&quot; Subscription Plan Types.</description>
    <inlineHelpText>When checked, the system will prorate new subscribers depending upon the &quot;Proration Rule&quot;. Defaults unchecked. Valid only for &quot;Calendar&quot; Subscription Plan Types.</inlineHelpText>
    <label>Enable Proration</label>
    <type>Checkbox</type>
</CustomField>