unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Grace_Period__c</fullName>
    <description>Defines the number of days after the subscription by which a member can renew a subscription without losing benefits.</description>
    <inlineHelpText>Defines the number of days after the subscription by which a member can renew a subscription without losing benefits.</inlineHelpText>
    <label>Grace Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>