unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Initial_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Initial_Term_Months__c</fullName>
    <description>** Conditionally Required ** The initial term, in number of months, for new subscribers of the plan. Required for termed subscription plans. Required for all non-calendar Subscription Plan types.</description>
    <inlineHelpText>** Conditionally Required ** The initial term, in number of months, for new subscribers of the plan. Required for termed subscription plans. Required for all non-calendar Subscription Plan types.</inlineHelpText>
    <label>Initial Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>