unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Invoice_Days_Variable__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Days_Variable__c</fullName>
    <description>The Invoice Days Variable is used to automatically invoice subscribers &quot;X&quot; number of days prior to subscription expiration.</description>
    <inlineHelpText>The Invoice Days Variable is used to automatically invoice subscribers &quot;X&quot; number of days prior to subscription expiration.</inlineHelpText>
    <label>Invoice Days Variable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>