unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Subscription Plan will be made available for selection - as configured for Subscription Plan Items.</description>
    <inlineHelpText>When checked, the Subscription Plan will be made available for selection - as configured for Subscription Plan Items.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>