unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Item_Renewal_Instructions__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Renewal_Instructions__c</fullName>
    <description>This field displays instructions when renewing from the current subscription into a new subscription and it&#39;s new plan.</description>
    <inlineHelpText>This field displays instructions when renewing from the current subscription into a new subscription and it&#39;s new plan.</inlineHelpText>
    <label>Item Renewal Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>