unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Number_Of_Installments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Number_Of_Installments__c</fullName>
    <description>** Required Conditionally ** The number of invoices to create for the payment schedule.</description>
    <inlineHelpText>** Required Conditionally ** The number of invoices to create for the payment schedule.</inlineHelpText>
    <label>Number Of Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>