unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated / Override / Conditionally Required ** Link to related Payment Gateway. Required when &quot;Auto Renew Option&quot; defined as &quot;Enabled&quot; or &quot;Required&quot;.</description>
    <inlineHelpText>** System Calculated / Override / Conditionally Required ** Link to related Payment Gateway. Required when &quot;Auto Renew Option&quot; defined as &quot;Enabled&quot; or &quot;Required&quot;.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Subscription Plans</relationshipLabel>
    <relationshipName>Subscription_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>