unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Payment_Settings_Instructions__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Settings_Instructions__c</fullName>
    <description>This field displays as instructional text on the manage payment settings page in the community.</description>
    <inlineHelpText>This field displays as instructional text on the manage payment settings page in the community.</inlineHelpText>
    <label>Payment Settings Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>