unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Payment Terms to use for &quot;Invoice&quot; installment schedules.</description>
    <inlineHelpText>Link to Payment Terms to use for &quot;Invoice&quot; installment schedules.</inlineHelpText>
    <label>Payment Terms</label>
    <referenceTo>OrderApi__Payment_Terms__c</referenceTo>
    <relationshipLabel>Subscription Plans</relationshipLabel>
    <relationshipName>Subscription_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>