unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__PostTerm_Renewal_Window__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__PostTerm_Renewal_Window__c</fullName>
    <description>The value entered in this field defines the number of days after the term (End Date) of a subscription term where a subscription will be renewable. User will only be able to purchase a new subscription. An empty value is treated as no limit.</description>
    <inlineHelpText>The value entered in this field defines the number of days after the term (End Date) of a subscription term where a subscription will be renewable. User will only be able to purchase a new subscription. An empty value is treated as no limit.</inlineHelpText>
    <label>Post-Term Renewal Window</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>