unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__PreTerm_Renewal_Window__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__PreTerm_Renewal_Window__c</fullName>
    <description>The value entered in this field defines the number of days before the term (End Date) of a subscription term where a subscription will be renewable. User will not be able to renew prior to this period. An empty value is treated as no limit.</description>
    <inlineHelpText>The value entered in this field defines the number of days before the term (End Date) of a subscription term where a subscription will be renewable. User will not be able to renew prior to this period. An empty value is treated as no limit.</inlineHelpText>
    <label>Pre-Term Renewal Window</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>