unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Proforma_Invoice_Authentication_Required__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Proforma_Invoice_Authentication_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the customer paying a proforma invoice will be forced to authenticate prior to accepting payment.</description>
    <inlineHelpText>When checked, the customer paying a proforma invoice will be forced to authenticate prior to accepting payment.</inlineHelpText>
    <label>Proforma Invoice Authentication Required</label>
    <type>Checkbox</type>
</CustomField>