unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Proforma_Invoice_Email_From_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Proforma_Invoice_Email_From_Name__c</fullName>
    <description>The value in this field will auto-populate the sender&#39;s name for proforma emails manually sent to your customers. User&#39;s Name is used if left blank. This field is not available for automated emails (i.e. auto renewal emails).</description>
    <inlineHelpText>The name of the sender of the proforma invoice email as it will display to your customers. Your user&#39;s first name and last name will be used if this field is left blank.</inlineHelpText>
    <label>Proforma Invoice Email From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>