unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Proforma_Invoice_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Proforma_Invoice_Email_Subject__c</fullName>
    <description>The default subject of the proforma invoice email sent to your customers. Your user&#39;s email will be used if this field is left blank.</description>
    <inlineHelpText>The default subject of the proforma invoice email sent to your customers. Your user&#39;s email will be used if this field is left blank.</inlineHelpText>
    <label>Proforma Invoice Email Subject</label>
    <length>240</length>
    <type>Text</type>
</CustomField>