unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Proration_Rule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Proration_Rule__c</fullName>
    <description>** Conditionally Required ** Select the &quot;Proration Rule&quot; to use for prorating the total charges for new subscribers of a &quot;Calendar&quot; Subscription Plan. Required when &quot;Enable Proration&quot; is checked.</description>
    <inlineHelpText>** Conditionally Required ** Select the &quot;Proration Rule&quot; to use for prorating the total charges for new subscribers of a &quot;Calendar&quot; Subscription Plan. Required when &quot;Enable Proration&quot; is checked.</inlineHelpText>
    <label>Proration Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>