unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Renewal_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Renewal_Term_Months__c</fullName>
    <description>** System Calculated Override ** The &quot;Renewal Term (Months)&quot; defaults to the &quot;Initial Term (Months)&quot; if no other value is specified.</description>
    <inlineHelpText>** System Calculated Override ** The &quot;Renewal Term (Months)&quot; defaults to the &quot;Initial Term (Months)&quot; if no other value is specified.</inlineHelpText>
    <label>Renewal Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>