unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Schedule_Frequency__c</fullName>
    <description>** Conditionally Required ** Select the frequency to invoice/charge a subscriber. Required when &quot;Enable Payment Schedule&quot; is checked.</description>
    <inlineHelpText>** Conditionally Required ** Select the frequency to invoice/charge a subscriber. Required when &quot;Enable Payment Schedule&quot; is checked.</inlineHelpText>
    <label>Schedule Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>