unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Schedule_Type__c</fullName>
    <description>** Conditionally Required ** Select &quot;Invoice&quot; to invoice the subscriber for each installment. Select &quot;Automatic Payment&quot; to automatically charge the subscriber using a stored Payment Method. Select &quot;User Option&quot; to allow the customer to choose.</description>
    <inlineHelpText>** Conditionally Required ** Select &quot;Invoice&quot; to invoice the subscriber for each installment. Select &quot;Automatic Payment&quot; to automatically charge the subscriber using a stored Payment Method. Select &quot;User Option&quot; to allow the customer to choose.</inlineHelpText>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Automatic Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>