unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/OrderApi__Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Type__c</fullName>
    <description>** Required ** Select the most appropriate option for the Subscription Plan Type.</description>
    <inlineHelpText>** Required ** Select the most appropriate option for the Subscription Plan Type.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Termed</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>