unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <label>Short Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>