unpackaged/main/default/objects/OrderApi__Subscription_Plan__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Type__c</columns>
    <columns>Short_Name__c</columns>
    <columns>OrderApi__Bill_Cycle__c</columns>
    <columns>OrderApi__Auto_Renew_Option__c</columns>
    <columns>OrderApi__Require_Payment_Method__c</columns>
    <columns>OrderApi__Enable_Proration__c</columns>
    <columns>OrderApi__Initial_Term_Months__c</columns>
    <columns>OrderApi__Is_Active__c</columns>
    <columns>OrderApi__Proration_Rule__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Billing_Type__c</columns>
    <columns>Billing_Quarter__c</columns>
    <columns>Invoice_Timing__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>